# Backend/api/apps/identity/urls.py
@@ -1,9 +1,10 @@
 from django.urls import path
 from rest_framework_simplejwt.views import TokenObtainPairView, TokenRefreshView
 
-from .views import MeView
+from .views import MeView, RegistroView
 
 urlpatterns = [
+    path("auth/register", RegistroView.as_view(), name="auth-register"),
     path("auth/login", TokenObtainPairView.as_view(), name="auth-login"),
     path("auth/refresh", TokenRefreshView.as_view(), name="auth-refresh"),
     path("users/me", MeView.as_view(), name="users-me"),
